# twitch-clippybot

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
docker/: Dockerfile
src/: ignore-users.json
src/clippybot/: __init__.py  __main__.py
