[project]
name = "clippybot"
description = "A really annoying autocorrection bot."
readme = "README.md"
version = "1.0.1"
dependencies = ["twitchAPI==4.2.1"]


[project.optional-dependencies]
dev = ["black", "isort", "pyllama", "pylint"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
clippybot = "clippybot.__main__:main"


[tool.pylint."MESSAGES CONTROL"]
max-line-length = 84
disable = [
    "W0102", # Dangerous Default Argument
    "W0603", # Global Statement
]
