[project]
name = "clippybot"
description = "A really annoying autocorrection bot."
readme = "README.md"
version = "1.0.0"
dependencies = [
    "twitchAPI==4.2.1",
    "decorator==5.1.1",
    "openai==1.35.13",
]


[project.optional-dependencies]
dev = ["black", "isort", "pyllama", "pylint"]

[build-system]
requires = ["setuptools==70.3.0", "importlib-metadata==8.0.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
clippybot = "clippybot.__main__:main"


[tool.black]
line_length = 84

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 84
disable = [
    "W0102", # Dangerous Default Argument
    "W0603", # Global Statement
]
